# 2026_bibliometrics_analysis

./: .gitignore  README.md  bibliometrics.py  pyproject.toml  regenerate_charts.py
bibliometrics/: __init__.py  api.py  charts.py  cli.py  config.py  metadata.py  references.py  sampling.py  stats.py
data/: reference_age_dataset.csv  reference_age_dataset_1000.csv
docs/: DATA.md  METHODOLOGY.md
tests/: conftest.py  test_api.py  test_metadata.py  test_references.py  test_sampling.py  test_stats.py
